<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, Sudoku!</string>
    <string name="app_name">Sudoku</string>
    <string name="menu_continue_button">Continue</string>
    <string name="menu_new_button">New</string>
    <string name="menu_about_button">About</string>
    <string name="menu_exit_button">Exit</string>
    <string name="about_title">About</string>
    <string name="about_text">Sudoku was created by Benjamin Shyong.
    
    The objective of this game is to fill the game grid so that
    each row, each column, and each of the 3x3 boxes contains the digits
    1-9 exactly once.</string>
	<string name="menu_settings_label">Settings</string>
	<string name="menu_settings_title">Game settings</string>
	<string name="menu_settings_shortcut">s</string>
	<string name="music_title">Music</string>
	<string name="music_summary">Play background music</string>
	<string name="hints_title">Hints</string>
	<string name="hints_summary">Show hints during game</string>

	<string name="difficulty_level">Difficulty</string>
	<string name="easy_label">Easy</string>
	<string name="medium_label">Medium</string>
	<string name="hard_label">Hard</string>
	
	<string name="game_title">Game</string>
	<string name="no_moves_label">No moves</string>	
	<string name="keypad_title">Keypad</string>
</resources>